--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         </div>
         <!--/MODAL-->
 
-        <footer id="section-footer" class="footer position-relative light-background py-5">
+        <footer id="section-footer" class="footer position-relative light-background py-5 mt-4">
             <div class="container">
                 <div class="copyright text-center ">
                     <p>© <span>Daniela Rodríguez Oyarce </span>2024 </p>
