--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                                     </a>
                                 </div>
                             </div>
-                        </div><
+                        </div>
 
                         <!-- Portfolio Item 9 -->
                         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
