--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- MENU LATERAL -->
     <header id="header" class="header">
         <div class="profile-img">
-            <img src="assets/img/photodr.jpg" alt="" class="img-fluid rounded-circle">
+            <img src="assets/img/photodr.jpg" alt="Photo by Christina Morillo from Pexels: https://www.pexels.com/photo/person-using-both-computer-and-a-laptop-1181673/" class="img-fluid rounded-circle">
         </div>
 
         <div class="logo">
