--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="container py-3" data-aos="fade-up" data-aos-delay="100">
                 <div class="row gy-4 justify-content-center">
                     <div class="col-lg-4">
-                        <img src="assets/img/about.jpg" class="img-fluid mx-2" alt="">
+                        <img src="assets/img/about.jpg" class="img-fluid mx-2" alt="Photo by Christina Morillo from Pexels: https://www.pexels.com/photo/person-using-both-computer-and-a-laptop-1181673/">
                     </div>
                     <div class="col-lg-8 content ">
                         <div class="svg-gallery" data-aos="fade-up" data-aos-delay="200">
